@@ -5,6 +5,7 @@ Author:
 Cody Precord <cprecord@editra.org>
 
 Translations:
+Angelo (Italian)
 Anri Ito (Japanese)
 Cody Precord (English/Japanese)
 DR0ID (German)
