@@ -45,6 +45,7 @@ started in the PluginManager returns after the manager has been closed.
 +Fix bug in failing to convert file paths to unicode when opening from command
 line.
 +Improper highlighting of documentation keywords
++Saving maximized state of window on Exit
 
 #-----------------------------------------------------------------------------#
 
